# PythonBackend

./: .flake8  ReadMe.md  app.py  contracts.py  db.py  grpc_app.py  manager.py  objects.py  pyproject.toml  service.proto
builds/: service_pb2.py  service_pb2_grpc.py
test/: test_create_comment.py  test_create_topic.py  test_get_topic.py  test_integration.py  test_stat.py
