[tool.poetry]
name = "pythonbackend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.2.2"
Flask-Pydantic = "^0.10.0"
argparse = "^1.4.0"
mock = "^4.0.3"
grpcio = "^1.49.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
flake8-bugbear = "^22.9.23"
grpcio-tools = "^1.49.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
